# almadar

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.github/: BRANCH_PROTECTION.md
.github/workflows/: ci.yml  release.yml  (+2 more)
cli/: README.md  install.sh
examples/: README.md
patterns/: README.md  component-mapping.json  event-contracts.json  registry.json
shells/: README.md
shells/python-shell/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cloudbuild.yaml  docker-compose.yaml  pyproject.toml
shells/python-shell/scripts/: deploy.sh  setup-secrets.sh
shells/python-shell/src/orbital_app/: __init__.py  main.py
shells/python-shell/src/orbital_app/core/: __init__.py  bindings.py  effect_executor.py  event_bus.py  event_router.py  firebase.py  repository.py  settings.py  websocket.py
shells/python-shell/src/orbital_app/middleware/: __init__.py  auth.py
shells/python-shell/src/orbital_app/nn/: __init__.py  constraints.py  forward.py  training.py
shells/python-shell/src/orbital_app/tensor/: __init__.py  contracts.py  ops.py
shells/python-shell/tests/: conftest.py  test_effect_executor.py  test_event_bus.py  test_generated_traits.py  test_integration.py  test_nn_builder.py  test_nn_constraints.py  test_nn_forward.py  test_nn_training.py  test_repository.py  test_tensor_contracts.py  test_tensor_ops.py
skills/: README.md
std/: LICENSE  README.md  index.ts  package.json  types.ts
tests/: README.md  run-tests.sh
website/: .gitignore  docusaurus.config.ts  firebase.json  package-lock.json  package.json  sidebars.ts
(+103 files in other folders)
